--- a/src/pages/bin-lookup/bin-lookup.html
+++ b/src/pages/bin-lookup/bin-lookup.html
@@ -13,10 +13,6 @@
         <ion-title>Bin Lookup</ion-title>
     </ion-navbar>
 
-</ion-header>
-
-
-<ion-content padding>
     <ion-item no-lines>
         <ion-label>
             Enter or scan location ID
@@ -25,30 +21,26 @@
             <ion-icon name="barcode"></ion-icon>
         </button>
     </ion-item>
+    <div style="padding: 5px 15px;">
+        <ng-template #listItem let-attrs="attrs">
+            <span [innerHTML]="attrs.data.LocationID.value | boldprefix:attrs.keyword"></span>
+        </ng-template>
+        <ion-auto-complete [(ngModel)]="selectedLocation" [dataProvider]="binAutocompleteService"
+                           [template]="listItem" (itemSelected)="loadBinContents($event)"></ion-auto-complete>
+    </div>
+</ion-header>
 
-    <ng-template #listItem let-attrs="attrs">
-        <span [innerHTML]="attrs.data.LocationID.value | boldprefix:attrs.keyword"></span>
-    </ng-template>
-
-    <ion-auto-complete [(ngModel)]="selectedLocation" [dataProvider]="binAutocompleteService" [template]="listItem"
-                       (itemSelected)="loadBinContents($event)"></ion-auto-complete>
-
-    <ion-scroll style="height: calc(100% - 100px);" scrollY="true" no-padding>
-        <ion-list>
-            <ion-item no-padding tappable *ngFor="let item of binContents" (click)="openDetailsModal($event, item)">
-                <ion-label>{{item.InventoryID.value}}</ion-label>
-                <div class="item-note" item-end style="width: 120px;">
-                    <ion-row>
-                        <ion-col col-8>Available:</ion-col>
-                        <ion-col col-4>{{item.QtyAvailable.value}}</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col col-8>On Hand:</ion-col>
-                        <ion-col col-4>{{item.QtyOnHand.value}}</ion-col>
-                    </ion-row>
-                </div>
-            </ion-item>
-        </ion-list>
-    </ion-scroll>
+<ion-content padding>
+    <ion-list class="item-list">
+        <ion-item class="list-item" no-padding tappable *ngFor="let item of binContents" (click)="openDetailsModal($event, item)">
+            <ion-row>
+                <ion-col col-8><strong>{{item.InventoryID.value}}</strong></ion-col>
+                <ion-col col-4 class="column-right">
+                        On Hand: {{item.QtyOnHand.value}}<br/>
+                        Available: {{item.QtyAvailable.value}}
+                </ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-list>
     <barcode-listener (scan)='loadItemByBarcode($event)'></barcode-listener>
 </ion-content>
