--- a/src/pages/bin-transfer/tabs/enter.html
+++ b/src/pages/bin-transfer/tabs/enter.html
@@ -59,6 +59,22 @@
                 </ion-item>
             </ion-col>
         </ion-row>
+        <ion-row *ngIf="showQty">
+            <ion-col col-6>
+                <ion-row *ngIf="showQty && currentLocationItems.hasOwnProperty(enteredData.item);">
+                    <ion-col>Available Qty:</ion-col>
+                    <ion-col>{{currentLocationItems[this.enteredData.item].QtyAvailable.value}}</ion-col>
+                </ion-row>
+                <ion-row *ngIf="showQty && currentLocationItems.hasOwnProperty(enteredData.item);">
+                    <ion-col>On-Hand Qty</ion-col>
+                    <ion-col>{{currentLocationItems[this.enteredData.item].QtyOnHand.value}}</ion-col>
+                </ion-row>
+            </ion-col>
+            <ion-col col-6 text-right>
+                <button type="button" ion-button small (click)="addTransferItem();">OK</button>
+                <button type="button" ion-button small (click)="resetForm();">Cancel</button>
+            </ion-col>
+        </ion-row>
     </ion-grid>
 </ion-content>
 <ion-footer no-shadow>
