--- a/src/pages/pick-shipments/pick/tabs/pick.html
+++ b/src/pages/pick-shipments/pick/tabs/pick.html
@@ -56,7 +56,7 @@
                 </ion-item>
             </ion-col>
         </ion-row>
-        <ion-row *ngIf="showLot">
+        <!--<ion-row *ngIf="showLot">
             <ion-col>
                 <ion-item>
                     <ion-label color="primary">Lot/Serial:</ion-label>
@@ -69,7 +69,7 @@
                     <ion-input id="lot" #lot [(ngModel)]="enteredData.lot" (keypress)="$event.stopPropagation();" (keyup.enter)="setLotSerial(); $event.stopPropagation();"></ion-input>
                 </ion-item>
             </ion-col>
-        </ion-row>
+        </ion-row>-->
         <ion-row *ngIf="showQty">
             <ion-col>
                 <ion-item>
@@ -85,8 +85,18 @@
                 </ion-item>
             </ion-col>
         </ion-row>
-        <ion-row text-right>
-            <ion-col col-12 text-right>
+        <ion-row>
+            <ion-col col-6>
+                <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
+                    <ion-col>Available Qty:</ion-col>
+                    <ion-col>{{this.itemAvailability[this.enteredData.location].QtyAvailable.value}}</ion-col>
+                </ion-row>
+                <ion-row *ngIf="showQty && itemAvailability.hasOwnProperty(enteredData.location);">
+                    <ion-col>On-Hand Qty</ion-col>
+                    <ion-col>{{this.itemAvailability[this.enteredData.location].QtyOnHand.value}}</ion-col>
+                </ion-row>
+            </ion-col>
+            <ion-col col-6 text-right>
                 <button type="button" ion-button small (click)="addPick()">OK</button>
                 <button type="button" ion-button small (click)="resetForm()">Cancel</button>
             </ion-col>
