--- a/src/pages/receive/shipment/tabs/shipment-enter.html
+++ b/src/pages/receive/shipment/tabs/shipment-enter.html
@@ -39,7 +39,7 @@
                 <ion-item no-padding>
                     <ion-label color="primary">Item:</ion-label>
                     <ion-input id="item" #item type="text" [(ngModel)]="enteredData.item"
-                               (keydown.enter)="setItem(); $event.stopPropagation();" (keypress)="$event.stopPropagation();"></ion-input>
+                               (change)="setItem();" (keypress)="$event.stopPropagation();"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
@@ -48,22 +48,20 @@
                 <ion-item no-padding>
                     <ion-label color="primary">To Bin:</ion-label>
                     <ion-input id="location" #location type="text" [(ngModel)]="enteredData.location"
-                               (keyup.enter)="setLocation(); $event.stopPropagation();" (keypress)="$event.stopPropagation();"></ion-input>
+                               (change)="setLocation();" (keypress)="$event.stopPropagation();"></ion-input>
                 </ion-item>
             </ion-col>
         </ion-row>
 
         <ion-row *ngIf="showQty">
-            <ion-col>
+            <ion-col col-6>
                 <ion-item no-padding>
                     <ion-label color="primary">Quantity:</ion-label>
-                    <ion-input id="qty" #qty type="number" min="0" [(ngModel)]="enteredData.qty"
-                               (keyup.enter)="addReceiptItem(); $event.stopPropagation();" (keypress)="$event.stopPropagation();"></ion-input>
+                    <ion-input id="qty" #qty type="number" min="0" [(ngModel)]="enteredData.qty" (focus)="$event.target.select();"
+                               (keydown.enter)="addReceiptItem(); $event.stopPropagation();" (keypress)="this.utils.limitKeyNumber($event); $event.stopPropagation();"></ion-input>
                 </ion-item>
                 <ion-label color="primary">Quantity Remaining: {{getRemainingQty()}}</ion-label>
             </ion-col>
-        </ion-row>
-        <ion-row *ngIf="showQty">
             <ion-col col-12 text-right>
                 <button type="button" align-self-end ion-button (click)="resetForm()">Cancel</button>
                 <button type="button" align-self-end ion-button (click)="addReceiptItem()">OK</button>
