A few TODOs crossed off the list plus cleanup
- Added remember password preference and supporting code.
- Reworked preference loading to solve default value issue.
- Cleaned up unused imports and added some comments.
- Added warehouse check for physical count.
- Fixed issue that caused an error when an existing allocation is over-picked.
- CSS/layout improvements.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -31,10 +31,10 @@
 </ion-header>
 
 
-<ion-content>
+<ion-content padding>
     <div style="padding: 0 10px;">
         <div text-center>
-            <img style="width: 100px; text-align: center; margin-top: 10px;" src="../../assets/imgs/logo.png" />
+            <img style="width: 100px; text-align: center;" src="../../assets/imgs/logo.png" />
             <h3>AcuStock</h3>
             <h5>Mobile warehouse management application for Acumatica</h5>
             <h6>Version: {{appVersion}}</h6>
