--- a/src/pages/item-lookup-details/item-lookup-details.html
+++ b/src/pages/item-lookup-details/item-lookup-details.html
@@ -25,57 +25,61 @@
 <ion-header>
 
     <ion-navbar>
+        <ion-buttons left>
+            <button navPop ion-button icon-only style="margin-left: 10px;">
+                <ion-icon name="arrow-back"></ion-icon>
+            </button>
+        </ion-buttons>
         <ion-title>Item Location Details</ion-title>
     </ion-navbar>
 
+    <div padding style="padding-bottom: 0;">
+        <h3>Item Details</h3>
+        <table>
+            <tr>
+                <td style="width: 100px;">InventoryID:</td>
+                <td>{{data.InventoryID.value}}</td>
+            </tr>
+            <tr>
+                <td style="vertical-align: top;">Description:</td>
+                <td>{{data.Description.value}}</td>
+            </tr>
+            <tr>
+                <td>Warehouse:</td>
+                <td>{{data.Warehouse.value}}</td>
+            </tr>
+            <tr>
+                <td>Location:</td>
+                <td>{{data.Location.value}}</td>
+            </tr>
+            <tr>
+                <td>Qty On-Hand:</td>
+                <td>{{data.QtyOnHand.value}}</td>
+            </tr>
+            <tr>
+                <td>Qty Available:</td>
+                <td>{{data.QtyAvailable.value}}</td>
+            </tr>
+        </table>
+        <h5>Serial/Lot Summary</h5>
+        <ion-row class="table-header">
+            <ion-col col-7>Serial / Lot</ion-col>
+            <ion-col col-5 text-right>On-Hand / Available</ion-col>
+        </ion-row>
+    </div>
 </ion-header>
 
-
 <ion-content padding>
-    <h2>Details</h2>
-    <table>
-        <tr>
-            <td style="width: 100px;">InventoryID:</td>
-            <td>{{data.InventoryID.value}}</td>
-        </tr>
-        <tr>
-            <td style="vertical-align: top;">Description:</td>
-            <td>{{data.Description.value}}</td>
-        </tr>
-        <tr>
-            <td>Warehouse:</td>
-            <td>{{data.Warehouse.value}}</td>
-        </tr>
-        <tr>
-            <td>Location:</td>
-            <td>{{data.Location.value}}</td>
-        </tr>
-        <tr>
-            <td>Qty On-Hand:</td>
-            <td>{{data.QtyOnHand.value}}</td>
-        </tr>
-        <tr>
-            <td>Qty Available:</td>
-            <td>{{data.QtyAvailable.value}}</td>
-        </tr>
-    </table>
-
-    <h2>Serial/Lot Summary</h2>
-    <ion-scroll style="height: calc(100% - 200px);" scrollY="true">
-        <ion-list>
-            <ion-item *ngFor="let serial of data.LotSerialDetails">
-                <ion-label>{{serial.LotSerialNbr.value}}</ion-label>
-                <div class="item-note" item-end style="width: 120px;">
-                    <ion-row>
-                        <ion-col col-8>Available:</ion-col>
-                        <ion-col col-4>{{serial.QtyAvailable.value}}</ion-col>
-                    </ion-row>
-                    <ion-row>
-                        <ion-col col-8>On Hand:</ion-col>
-                        <ion-col col-4>{{serial.QtyOnHand.value}}</ion-col>
-                    </ion-row>
-                </div>
-            </ion-item>
-        </ion-list>
-    </ion-scroll>
+    <ion-list class="item-list">
+        <ion-item class="list-item" no-padding *ngFor="let serial of data.LotSerialDetails">
+            <ion-row>
+                <ion-col col-7>
+                    <strong>{{serial.LotSerialNbr.value}}</strong>
+                </ion-col>
+                <ion-col col-5 class="column-right">
+                    {{serial.QtyOnHand.value}} / {{serial.QtyAvailable.value}}
+                </ion-col>
+            </ion-row>
+        </ion-item>
+    </ion-list>
 </ion-content>
