--- a/src/pages/setup/setup.html
+++ b/src/pages/setup/setup.html
@@ -32,7 +32,7 @@
 
 
 <ion-content padding text-center>
-    <img style="width: 100px; text-align: center" src="../../assets/imgs/logo.png" />
+    <img style="width: 90px;" src="../../assets/imgs/logo.png" />
     <h2>Welcome to AcuStock</h2>
     <p>To get started you must install the AcuShip customisation in Acumatica.
         Once completed you can configure your devices manually or using QR code.
