More stuff - mainly for ionic production build
- Added camera scanner functionality to all entry screens.
- Removed duplicate declarasions to fix error with production compile.
- Fixed issue with component name in production (component.name is minified).
- Wrap all barcode scanner methods in NgZone to fix UI not updating during scan.
- Various other tweaks.

--- a/src/pages/adjustment/tabs/adjustment-enter.html
+++ b/src/pages/adjustment/tabs/adjustment-enter.html
@@ -37,7 +37,9 @@
 
 <ion-content padding style="position: relative;">
     <div>
-        <h5>Scan Bin</h5>
+        <button type="button" ion-button small icon-only float-right (click)="startCameraScanner()">
+            <ion-icon name="barcode"></ion-icon>
+        </button>
     </div>
 
     <ion-grid no-padding>
