--- a/src/pages/adjustment/tabs/adjustment-list.html
+++ b/src/pages/adjustment/tabs/adjustment-list.html
@@ -28,7 +28,7 @@
         <button ion-button menuToggle>
             <ion-icon name="menu"></ion-icon>
         </button>
-        <ion-title>Uncommitted Adjustments</ion-title>
+        <ion-title>Pending Adjustments</ion-title>
     </ion-navbar>
 
 </ion-header>
